tests/checker/bad/libdiamondcycle.scilla
scilla_version 0

import TestLibDiamondTopCycle

library LibDiamondCycle

contract TestContr1
()
